--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="hero-main">
-              <h1 class="hero-main-title">Abigail Bloom</h1>
+              <h1 class="hero-main-title">Hadi Hassan</h1>
               <p class="hero-main-description">Digital Media Student | 3D Artist</p>
             </div>
 
